@@ -55,7 +55,7 @@
 .host-edit #linkedTemplateTable { width: 100%; }
 .host-edit #newTemplateTable { width: 100%; }
 .host-edit.host-edit-discovered #linkedTemplateTable { min-width: 250px; }
-.template-link-block { min-width: 400px; }
+.template-link-block { min-width: 400px; float: left; display: block; }
 
 /* housekeeper elements */
 .hk .element-row { margin-top: -3px; border-top-width: 0; }
@@ -143,6 +143,10 @@ table.tableinfo-overview-hint { width: 200px; }
 .item-list table.filter tr td.label.col4 { width: 8%; }
 .item-list .filter .col1 .text,
 .item-list .filter .multiselect { width: 165px; line-height: 12px; }
+.item-list .filter .col1 .text { padding: 1px 0; }
+.item-list .filter .col1 span.text { padding: 0 4px; }
+.item-list .filter .multiselect { padding: 0; }
+.item-list .filter .multiselect-wrapper { width: 217px; }
 .item-list .menuPopup { width: 200px; }
 .item-list .filter .multiselect .selected ul { margin: 0;}
 
@@ -171,13 +175,13 @@ table.tableinfo-overview-hint { width: 200px; }
 #sysmap_cnt .ui-selecting { border: 3px #FFCC00 solid; margin: -3px; }
 #map-window { z-index: 100; position: absolute; display: none; top: 50px; left: 500px; box-shadow: 0 0 5px 5px rgba(204, 204, 204, 0.5); }
 #map-window .formtable { width: 100%; }
-#map-window .formtable #application { width: 313px; }
+#map-window .formtable #application { width: 312px; }
 #map-window #elements-selected { border: 1px dotted black; margin-bottom: 5px; height: 128px; overflow-y: scroll; overflow-x: hidden; }
 #map-window #mapLinksContainer { border: 1px solid rgb(170, 170, 170); max-height: 128px; overflow-y: scroll; overflow-x: hidden; }
 #map-window #linkForm { display: none; }
 #map-window #linkForm #linklabel { margin-top: 4px; }
 #selementForm .multiselect .selected ul { margin: 0;}
-#map-window #application-select-row .link_menu { margin-left: 3px; }
+#map-window #application-select-row .link_menu { margin-left: 6px; }
 
 /* maintenance icon */
 .icon-maintenance-inline, .icon-maintenance-abs {
